[package]
name = "rl"
version = "0.3.0"
edition = "2021"
description = "A reinforcement learning library"
keywords = ["rl", "ml", "machine-learning", "ai"]
repository = "https://github.com/benbaarber/rl"

[features]
gym = ["dep:strum", "dep:gym-rs"]

[dependencies]
burn = { version = "0.14.0", git = "https://github.com/tracel-ai/burn", features = ["wgpu", "autodiff"] }
crossterm = "0.27.0"
gym-rs = { git = "https://github.com/MathisWellmann/gym-rs.git", optional = true }
log = { version = "0.4.21", features = ["std"] }
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["alloc"] }
ratatui = { version = "0.26.3", features = ["unstable-widget-ref"] }
strum = { version = "0.26.2", features = ["derive"], optional = true }
tui-logger = "0.11.1"
unicode-width = "0.1.13"

[[example]]
name = "q_table_frozen_lake"
required-features = ["gym"]

[[example]]
name = "q_table_snake"
required-features = ["gym"]

[[example]]
name = "dqn_snake"
required-features = ["gym"]

[[example]]
name = "dqn_cartpole"
required-features = ["gym"]