[package]
name = "rl"
version = "0.4.0"
edition = "2021"
description = "A reinforcement learning library"
license = "MIT"
keywords = ["rl", "ml", "machine-learning", "ai"]
categories = ["science"]
repository = "https://github.com/benbaarber/rl"
rust-version = "1.79"

[features]
gym = ["dep:gym-rs", "dep:strum"]
viz = ["dep:ratatui", "dep:crossterm", "dep:tui-logger", "dep:unicode-width"]

[dependencies]
burn = { version = "0.13.2", features = ["autodiff"] }
crossterm = { version = "0.27.0", optional = true }
gym-rs = { version = "0.3.0", git = "https://github.com/MathisWellmann/gym-rs.git", optional = true }
log = { version = "0.4.21", features = ["std"] }
rand = { version = "0.8.5", features = ["alloc"] }
rand_distr = "0.4.3"
ratatui = { version = "0.26.3", features = ["unstable-widget-ref"], optional = true }
strum = { version = "0.26.2", features = ["derive"], optional = true }
tui-logger = { version = "0.11.1", optional = true }
unicode-width = { version = "0.1.13", optional = true }

[dev-dependencies]
burn = { version = "0.13.2", features = ["wgpu", "ndarray"] }
gix-fs = "0.11.0"
once_cell = "1.19.0"

[[example]]
name = "q_table_frozen_lake"
required-features = ["gym", "viz"]

[[example]]
name = "q_table_snake"
required-features = ["gym", "viz"]

[[example]]
name = "dqn_cartpole"
required-features = ["gym", "viz"]
